Fixed spacing issue on flipping button

--- a/src/css/figure.css
+++ b/src/css/figure.css
@@ -1332,6 +1332,10 @@
         cursor: move;
     }
 
+    .flipping button{
+        margin: 2px;
+    }
+
     .flipping .btn.active {
         background-color: #007bff;
         color: white;
